# GPU-Jetlabs

./: .gitignore
Jetlabs/http_remote/: CMakeLists.txt  package.xml
Jetlabs/http_remote/launch/: http_remote.launch
Jetlabs/http_remote/src/: http_remote.cpp  old.cpp
Jetlabs/lab4_autonomous_driving/src/: drive_inference.cpp
MPIHello/: MPIHello.qbs  main.c
MPIIntegrate/: main.c
MPIMatrixVector/: MPIMatrixVector.qbs  main.c
OpenMP_Hello/: OpenMP_Hello.qbs  main.c
OpenMP_OddEvenSort/: main.c
